--- a/config/database.yml
+++ b/config/database.yml
@@ -5,11 +5,11 @@ default: &default
 
 development:
   <<: *default
-  database: multivagas_development
+  database: itaborai_rotativo_development
 
 test:
   <<: *default
-  database: multivagas_test
+  database: itaborai_rotativo_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -32,6 +32,6 @@ test:
 #
 production:
   <<: *default
-  database: multivagas_production
-  username: multivagas
+  database: itaborai_rotativo_production
+  username: itaborai_rotativo
   password: <%= ENV['MULTIVAGAS_DATABASE_PASSWORD'] %>
